--- a/components/rtticontrols/examples/exampleproject2.lpi
+++ b/components/rtticontrols/examples/exampleproject2.lpi
@@ -1,19 +1,15 @@
 <?xml version="1.0"?>
 <CONFIG>
   <ProjectOptions>
-    <Version Value="3"/>
+    <Version Value="5"/>
     <General>
-      <ProjectType Value="Application"/>
-      <Flags>
-        <SaveClosedFiles Value="False"/>
-        <SaveOnlyProjectUnits Value="True"/>
-      </Flags>
       <MainUnit Value="0"/>
       <ActiveEditorIndexAtStart Value="0"/>
       <IconPath Value="./"/>
       <TargetFileExt Value=""/>
       <Title Value="exampleproject2"/>
     </General>
+    <JumpHistory Count="0" HistoryIndex="-1"/>
     <Units Count="2">
       <Unit0>
         <Filename Value="exampleproject2.lpr"/>
@@ -22,7 +18,7 @@
         <UsageCount Value="20"/>
       </Unit0>
       <Unit1>
-        <CursorPos X="20" Y="47"/>
+        <CursorPos X="11" Y="48"/>
         <EditorIndex Value="0"/>
         <Filename Value="example2.pas"/>
         <ComponentName Value="Form1"/>
@@ -58,7 +54,7 @@
     </RequiredPackages>
   </ProjectOptions>
   <CompilerOptions>
-    <Version Value="2"/>
+    <Version Value="3"/>
     <SearchPaths>
       <SrcPath Value="$(LazarusDir)/lcl/;$(LazarusDir)/lcl/interfaces/$(LCLWidgetType)/"/>
     </SearchPaths>
