--- a/components/rtticontrols/examples/exampleproject2.lpi
+++ b/components/rtticontrols/examples/exampleproject2.lpi
@@ -4,21 +4,26 @@
     <Version Value="5"/>
     <General>
       <MainUnit Value="0"/>
-      <ActiveEditorIndexAtStart Value="0"/>
+      <ActiveEditorIndexAtStart Value="1"/>
       <IconPath Value="./"/>
       <TargetFileExt Value=""/>
       <Title Value="exampleproject2"/>
     </General>
-    <JumpHistory Count="0" HistoryIndex="-1"/>
-    <Units Count="2">
+    <JumpHistory Count="1" HistoryIndex="0">
+      <Position1>
+        <Filename Value="/home/mattias/pascal/wichtig/lazarus/helpmanager.pas"/>
+        <Caret Line="120" Column="15" TopLine="106"/>
+      </Position1>
+    </JumpHistory>
+    <Units Count="5">
       <Unit0>
         <Filename Value="exampleproject2.lpr"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="ExampleProject2"/>
-        <UsageCount Value="20"/>
+        <UsageCount Value="30"/>
       </Unit0>
       <Unit1>
-        <CursorPos X="11" Y="48"/>
+        <CursorPos X="23" Y="46"/>
         <EditorIndex Value="0"/>
         <Filename Value="example2.pas"/>
         <ComponentName Value="Form1"/>
@@ -27,8 +32,31 @@
         <ResourceFilename Value="example2.lrs"/>
         <TopLine Value="22"/>
         <UnitName Value="Example2"/>
-        <UsageCount Value="20"/>
+        <UsageCount Value="30"/>
       </Unit1>
+      <Unit2>
+        <CursorPos X="28" Y="47"/>
+        <EditorIndex Value="1"/>
+        <Filename Value="/home/mattias/pascal/wichtig/lazarus/helpmanager.pas"/>
+        <Loaded Value="True"/>
+        <TopLine Value="29"/>
+        <UnitName Value="HelpManager"/>
+        <UsageCount Value="15"/>
+      </Unit2>
+      <Unit3>
+        <CursorPos X="20" Y="1803"/>
+        <Filename Value="/home/mattias/pascal/wichtig/lazarus/lcl/controls.pp"/>
+        <TopLine Value="1779"/>
+        <UnitName Value="Controls"/>
+        <UsageCount Value="9"/>
+      </Unit3>
+      <Unit4>
+        <CursorPos X="13" Y="144"/>
+        <Filename Value="/home/mattias/pascal/wichtig/lazarus/components/rtticontrols/rttictrls.pas"/>
+        <TopLine Value="125"/>
+        <UnitName Value="RTTICtrls"/>
+        <UsageCount Value="10"/>
+      </Unit4>
     </Units>
     <PublishOptions>
       <Version Value="2"/>
