--- a/.gitattributes
+++ b/.gitattributes
@@ -167,11 +167,13 @@ components/rtticontrols/rttictrls.lrs svneol=native#text/pascal
 components/rtticontrols/rttictrls.pas svneol=native#text/pascal
 components/rtticontrols/runtimetypeinfocontrols.lpk svneol=native#text/pascal
 components/rtticontrols/runtimetypeinfocontrols.pas svneol=native#text/pascal
+components/rtticontrols/tmultipropertylink.xpm -text svneol=native#image/x-xpixmap
 components/rtticontrols/ttibutton.xpm -text svneol=native#image/x-xpixmap
 components/rtticontrols/tticalendar.xpm -text svneol=native#image/x-xpixmap
 components/rtticontrols/tticheckbox.xpm -text svneol=native#image/x-xpixmap
 components/rtticontrols/tticheckgroup.xpm -text svneol=native#image/x-xpixmap
 components/rtticontrols/ttichecklistbox.xpm -text svneol=native#image/x-xpixmap
+components/rtticontrols/tticolorbutton.xpm -text svneol=native#image/x-xpixmap
 components/rtticontrols/tticombobox.xpm -text svneol=native#image/x-xpixmap
 components/rtticontrols/ttiedit.xpm -text svneol=native#image/x-xpixmap
 components/rtticontrols/ttigroupbox.xpm -text svneol=native#image/x-xpixmap
