--- a/.gitattributes
+++ b/.gitattributes
@@ -1675,6 +1675,7 @@ tools/install/win32/build-lazarus.bat -text svneol=native#application/x-msdos-pr
 tools/install/win32/create_installer.bat -text svneol=native#application/x-msdos-program
 tools/install/win32/editoroptions.xml svneol=native#text/xml
 tools/install/win32/environmentoptions.xml svneol=native#text/xml
+tools/install/win32/lazarus_install_cheetah.bmp -text svneol=unset#image/bmp
 tools/install/win32/readme.txt svneol=native#text/plain
 tools/lazarusmake.ini svneol=native#text/plain
 tools/lazres.lpi svneol=native#text/plain
