extended codepageconverter example  from Barko
 SVN 6412@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -512,6 +512,9 @@ examples/codepageconverter/lazconverter.lpr svneol=native#text/pascal
 examples/codepageconverter/mainunit.lfm svneol=native#text/plain
 examples/codepageconverter/mainunit.lrs svneol=native#text/pascal
 examples/codepageconverter/mainunit.pas svneol=native#text/pascal
+examples/codepageconverter/viewunit.lfm svneol=native#text/plain
+examples/codepageconverter/viewunit.lrs svneol=native#text/pascal
+examples/codepageconverter/viewunit.pas svneol=native#text/pascal
 examples/combobox.pp svneol=native#text/pascal
 examples/comdialogs.pp svneol=native#text/pascal
 examples/dlgform.pp svneol=native#text/pascal
