--- a/examples/codepageconverter/lazconverter.lpi
+++ b/examples/codepageconverter/lazconverter.lpi
@@ -13,25 +13,39 @@
       <TargetFileExt Value=""/>
       <Title Value="lazconverter"/>
     </General>
-    <Units Count="2">
+    <Units Count="3">
       <Unit0>
+        <CursorPos X="1" Y="1"/>
         <Filename Value="lazconverter.lpr"/>
         <IsPartOfProject Value="True"/>
+        <TopLine Value="1"/>
         <UnitName Value="lazconverter"/>
-        <UsageCount Value="26"/>
+        <UsageCount Value="29"/>
       </Unit0>
       <Unit1>
-        <CursorPos X="48" Y="66"/>
+        <CursorPos X="15" Y="29"/>
         <EditorIndex Value="0"/>
         <Filename Value="mainunit.pas"/>
-        <ComponentName Value="Form1"/>
+        <ComponentName Value="LazConverterForm"/>
         <IsPartOfProject Value="True"/>
         <Loaded Value="True"/>
         <ResourceFilename Value="mainunit.lrs"/>
-        <TopLine Value="48"/>
+        <TopLine Value="23"/>
         <UnitName Value="mainunit"/>
-        <UsageCount Value="26"/>
+        <UsageCount Value="29"/>
       </Unit1>
+      <Unit2>
+        <CursorPos X="30" Y="16"/>
+        <EditorIndex Value="1"/>
+        <Filename Value="viewunit.pas"/>
+        <ComponentName Value="ViewForm"/>
+        <IsPartOfProject Value="True"/>
+        <Loaded Value="True"/>
+        <ResourceFilename Value="viewunit.lrs"/>
+        <TopLine Value="1"/>
+        <UnitName Value="viewunit"/>
+        <UsageCount Value="22"/>
+      </Unit2>
     </Units>
     <PublishOptions>
       <Version Value="2"/>
@@ -45,18 +59,22 @@
         <LaunchingApplication PathPlusParams="/usr/X11R6/bin/xterm -T 'Lazarus Run Output' -e $(LazarusDir)/tools/runwait.sh $(TargetCmdLine)"/>
       </local>
     </RunParams>
-    <RequiredPackages Count="2">
+    <RequiredPackages Count="3">
       <Item1>
-        <PackageName Value="LCL"/>
+        <PackageName Value="SynEdit"/>
+        <MinVersion Major="1" Valid="True"/>
       </Item1>
       <Item2>
+        <PackageName Value="LCL"/>
+      </Item2>
+      <Item3>
         <PackageName Value="filefindlaz"/>
         <MinVersion Valid="True"/>
-      </Item2>
+      </Item3>
     </RequiredPackages>
   </ProjectOptions>
   <CompilerOptions>
-    <Version Value="2"/>
+    <Version Value="3"/>
     <SearchPaths>
       <SrcPath Value="$(LazarusDir)/lcl/;$(LazarusDir)/lcl/interfaces/$(LCLWidgetType)/"/>
     </SearchPaths>
@@ -73,7 +91,6 @@
       <Debugging>
         <UseLineInfoUnit Value="False"/>
       </Debugging>
-      <LinkStyle Value="2"/>
       <Options>
         <Win32>
           <GraphicApplication Value="True"/>
