--- a/.gitattributes
+++ b/.gitattributes
@@ -505,8 +505,10 @@ examples/bitbtnform.pp svneol=native#text/pascal
 examples/bitbutton.pp svneol=native#text/pascal
 examples/checkbox.pp svneol=native#text/pascal
 examples/codepageconverter/codepages.ini svneol=native#text/plain
+examples/codepageconverter/filefind/filefind.lrs svneol=native#text/pascal
 examples/codepageconverter/filefind/filefind.pas svneol=native#text/pascal
 examples/codepageconverter/filefind/filefindlaz.lpk svneol=native#text/pascal
+examples/codepageconverter/filefind/tfilesearch.xpm -text svneol=native#image/x-xpixmap
 examples/codepageconverter/lazconverter.lpi svneol=native#text/plain
 examples/codepageconverter/lazconverter.lpr svneol=native#text/pascal
 examples/codepageconverter/mainunit.lfm svneol=native#text/plain
