--- a/.gitattributes
+++ b/.gitattributes
@@ -508,15 +508,21 @@ examples/codepageconverter/codepages.ini svneol=native#text/plain
 examples/codepageconverter/filefind/filefind.lrs svneol=native#text/pascal
 examples/codepageconverter/filefind/filefind.pas svneol=native#text/pascal
 examples/codepageconverter/filefind/filefindlaz.lpk svneol=native#text/pascal
+examples/codepageconverter/filefind/filefindlaz.pas svneol=native#text/pascal
 examples/codepageconverter/filefind/tfilesearch.xpm -text svneol=native#image/x-xpixmap
 examples/codepageconverter/lazconverter.lpi svneol=native#text/plain
 examples/codepageconverter/lazconverter.lpr svneol=native#text/pascal
 examples/codepageconverter/mainunit.lfm svneol=native#text/plain
 examples/codepageconverter/mainunit.lrs svneol=native#text/pascal
+examples/codepageconverter/mainunit.lrt svneol=native#text/plain
 examples/codepageconverter/mainunit.pas svneol=native#text/pascal
+examples/codepageconverter/mainunit.po svneol=native#text/plain
+examples/codepageconverter/mainunit.ru_RU.UTF-8.po svneol=native#text/plain
 examples/codepageconverter/viewunit.lfm svneol=native#text/plain
 examples/codepageconverter/viewunit.lrs svneol=native#text/pascal
+examples/codepageconverter/viewunit.lrt svneol=native#text/plain
 examples/codepageconverter/viewunit.pas svneol=native#text/pascal
+examples/codepageconverter/viewunit.po svneol=native#text/plain
 examples/combobox.pp svneol=native#text/pascal
 examples/comdialogs.pp svneol=native#text/pascal
 examples/dlgform.pp svneol=native#text/pascal
@@ -707,6 +713,7 @@ ide/lazarus_dci.lrs svneol=native#text/pascal
 ide/lazarusidestrconsts.pas svneol=native#text/pascal
 ide/lazarusmanager.pas svneol=native#text/pascal
 ide/lazconf.pp svneol=native#text/pascal
+ide/lrtpotools.pas svneol=native#text/pascal
 ide/macropromptdlg.pas svneol=native#text/pascal
 ide/main.pp svneol=native#text/pascal
 ide/mainbar.pas svneol=native#text/pascal
@@ -1129,6 +1136,7 @@ languages/lazaruside.pliso.po svneol=native#text/plain
 languages/lazaruside.plwin.po svneol=native#text/plain
 languages/lazaruside.po svneol=native#text/plain
 languages/lazaruside.ru.po svneol=native#text/plain
+languages/lazaruside.ruutf.po svneol=native#text/plain
 languages/lazaruside.ruwin.po svneol=native#text/plain
 languages/objinspstrconsts.ca.po svneol=native#text/plain
 languages/objinspstrconsts.de.po svneol=native#text/plain
@@ -1143,6 +1151,7 @@ languages/objinspstrconsts.pliso.po svneol=native#text/plain
 languages/objinspstrconsts.plwin.po svneol=native#text/plain
 languages/objinspstrconsts.po svneol=native#text/plain
 languages/objinspstrconsts.ru.po svneol=native#text/plain
+languages/objinspstrconsts.ruutf.po svneol=native#text/plain
 languages/objinspstrconsts.ruwin.po svneol=native#text/plain
 lcl/actnlist.pas svneol=native#text/pascal
 lcl/alllclunits.pp svneol=native#text/pascal
@@ -1161,6 +1170,7 @@ lcl/customtimer.pas svneol=native#text/pascal
 lcl/dbactns.pp svneol=native#text/pascal
 lcl/dbctrls.pp svneol=native#text/pascal
 lcl/dbgrids.pas svneol=native#text/pascal
+lcl/defaulttranslator.pas svneol=native#text/pascal
 lcl/dialogs.pp svneol=native#text/pascal
 lcl/dirsel.lfm svneol=native#text/plain
 lcl/dirsel.lrs svneol=native#text/pascal
@@ -1562,6 +1572,7 @@ lcl/languages/lcl.pliso.po svneol=native#text/plain
 lcl/languages/lcl.plwin.po svneol=native#text/plain
 lcl/languages/lcl.po svneol=native#text/plain
 lcl/languages/lcl.ru.po svneol=native#text/plain
+lcl/languages/lcl.ruutf.po svneol=native#text/plain
 lcl/languages/lcl.ruwin.po svneol=native#text/plain
 lcl/lazlinkedlist.pas svneol=native#text/pascal
 lcl/lclclasses.pp svneol=native#text/pascal
