updated russian utf translation  from Vasily
 SVN 6433@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -43,6 +43,7 @@ components/codetools/languages/codetools.pliso.po svneol=native#text/plain
 components/codetools/languages/codetools.plwin.po svneol=native#text/plain
 components/codetools/languages/codetools.po svneol=native#text/plain
 components/codetools/languages/codetools.ru.po svneol=native#text/plain
+components/codetools/languages/codetools.ruutf.po svneol=native#text/plain
 components/codetools/languages/codetools.ruwin.po svneol=native#text/plain
 components/codetools/laz_dom.pas svneol=native#text/pascal
 components/codetools/laz_xmlcfg.pas svneol=native#text/pascal
@@ -239,6 +240,7 @@ components/synedit/languages/synedit.pliso.po svneol=native#text/plain
 components/synedit/languages/synedit.plwin.po svneol=native#text/plain
 components/synedit/languages/synedit.po svneol=native#text/plain
 components/synedit/languages/synedit.ru.po svneol=native#text/plain
+components/synedit/languages/synedit.ruutf.po svneol=native#text/plain
 components/synedit/languages/synedit.ruwin.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.ca.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.de.po svneol=native#text/plain
@@ -250,6 +252,7 @@ components/synedit/languages/synmacrorecorder.pliso.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.plwin.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.ru.po svneol=native#text/plain
+components/synedit/languages/synmacrorecorder.ruutf.po svneol=native#text/plain
 components/synedit/languages/synmacrorecorder.ruwin.po svneol=native#text/plain
 components/synedit/syncompletion.pas svneol=native#text/pascal
 components/synedit/synedit.inc svneol=native#text/pascal
