fixed New dialog getting new item
 SVN 6444@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -636,6 +636,9 @@ ide/cleandirdlg.lfm svneol=native#text/plain
 ide/cleandirdlg.lrs svneol=native#text/pascal
 ide/cleandirdlg.pas svneol=native#text/pascal
 ide/clipboardhistory.pas svneol=native#text/pascal
+ide/codeexplopts.lfm svneol=native#text/plain
+ide/codeexplopts.lrs svneol=native#text/pascal
+ide/codeexplopts.pas svneol=native#text/pascal
 ide/codeexplorer.lfm svneol=native#text/plain
 ide/codeexplorer.lrs svneol=native#text/pascal
 ide/codeexplorer.pas svneol=native#text/pascal
