started anchor editor and moved OverWritePromp from lcl to gtk intf
 SVN 6484@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -354,6 +354,9 @@ designer/abstractcompiler.pp svneol=native#text/pascal
 designer/abstracteditor.pp svneol=native#text/pascal
 designer/abstractfilesystem.pp svneol=native#text/pascal
 designer/aligncompsdlg.pp svneol=native#text/pascal
+designer/anchoreditor.lfm svneol=native#text/plain
+designer/anchoreditor.lrs svneol=native#text/pascal
+designer/anchoreditor.pas svneol=native#text/pascal
 designer/changeclassdialog.lfm svneol=native#text/plain
 designer/changeclassdialog.lrs svneol=native#text/pascal
 designer/changeclassdialog.pas svneol=native#text/pascal
