added example for TTIGrid
 SVN 6523@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -158,12 +158,17 @@ components/rtticontrols/examples/example2.pas svneol=native#text/pascal
 components/rtticontrols/examples/example3.lfm svneol=native#text/plain
 components/rtticontrols/examples/example3.lrs svneol=native#text/pascal
 components/rtticontrols/examples/example3.pas svneol=native#text/pascal
+components/rtticontrols/examples/examplegrid1.lfm svneol=native#text/plain
+components/rtticontrols/examples/examplegrid1.lrs svneol=native#text/pascal
+components/rtticontrols/examples/examplegrid1.pas svneol=native#text/pascal
 components/rtticontrols/examples/exampleproject1.lpi svneol=native#text/plain
 components/rtticontrols/examples/exampleproject1.lpr svneol=native#text/pascal
 components/rtticontrols/examples/exampleproject2.lpi svneol=native#text/plain
 components/rtticontrols/examples/exampleproject2.lpr svneol=native#text/pascal
 components/rtticontrols/examples/exampleproject3.lpi svneol=native#text/plain
 components/rtticontrols/examples/exampleproject3.lpr svneol=native#text/pascal
+components/rtticontrols/examples/exampleprojectgrid1.lpi svneol=native#text/plain
+components/rtticontrols/examples/exampleprojectgrid1.lpr svneol=native#text/pascal
 components/rtticontrols/rttictrls.lrs svneol=native#text/pascal
 components/rtticontrols/rttictrls.pas svneol=native#text/pascal
 components/rtticontrols/rttigrids.pas svneol=native#text/pascal
