--- a/.gitattributes
+++ b/.gitattributes
@@ -1718,6 +1718,7 @@ tools/install/win32/create_installer.bat -text svneol=native#application/x-msdos
 tools/install/win32/editoroptions.xml svneol=native#text/xml
 tools/install/win32/environmentoptions.xml svneol=native#text/xml
 tools/install/win32/lazarus_install_cheetah.bmp -text svneol=unset#image/bmp
+tools/install/win32/lazarus_install_cheetah_small.bmp -text svneol=unset#image/bmp
 tools/install/win32/readme.txt svneol=native#text/plain
 tools/lazarusmake.ini svneol=native#text/plain
 tools/lazres.lpi svneol=native#text/plain
