--- a/.gitattributes
+++ b/.gitattributes
@@ -551,6 +551,16 @@ examples/easter/main.lfm svneol=native#text/plain
 examples/easter/main.lrs svneol=native#text/pascal
 examples/easter/main.pas svneol=native#text/pascal
 examples/edittest.pp svneol=native#text/pascal
+examples/grid_semaphor/example/table01.stb -text svneol=unset#application/octet-stream
+examples/grid_semaphor/example/table02.stb -text svneol=unset#application/octet-stream
+examples/grid_semaphor/example/table03hidden.stb -text svneol=unset#application/octet-stream
+examples/grid_semaphor/example/table04hidden.stb -text svneol=unset#application/octet-stream
+examples/grid_semaphor/readme.txt svneol=native#text/plain
+examples/grid_semaphor/semaphorgridlpk.lpk svneol=native#text/pascal
+examples/grid_semaphor/semaphorgridlpk.pas svneol=native#text/pascal
+examples/grid_semaphor/semaphorgrids.pas svneol=native#text/pascal
+examples/grid_semaphor/semaphorgridsicon.lrs svneol=native#text/pascal
+examples/grid_semaphor/tsemaphorgrid.xpm -text svneol=native#image/x-xpixmap
 examples/groupbox.pp svneol=native#text/pascal
 examples/groupboxnested.pas svneol=native#text/pascal
 examples/gtkglarea/data/particle.bmp -text svneol=unset#image/bmp
