added sqldb packages  from Joost van der Sluis
 SVN 6571@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -212,6 +212,15 @@ components/sdf/sdflaz.lpk svneol=native#text/pascal
 components/sdf/sdflaz.pas svneol=native#text/pascal
 components/sdf/tfixedformatdataset.xpm -text svneol=native#image/x-xpixmap
 components/sdf/tsdfdataset.xpm -text svneol=native#image/x-xpixmap
+components/sqldb/interbase/ibconnectionlaz.lpk svneol=native#text/pascal
+components/sqldb/interbase/ibconnectionlaz.pas svneol=native#text/pascal
+components/sqldb/interbase/registeribconnection.pas svneol=native#text/pascal
+components/sqldb/postgres/pqconnectionlaz.lpk svneol=native#text/pascal
+components/sqldb/postgres/pqconnectionlaz.pas svneol=native#text/pascal
+components/sqldb/postgres/registerpqconnection.pas svneol=native#text/pascal
+components/sqldb/registersqldb.pas svneol=native#text/pascal
+components/sqldb/sqldblaz.lpk svneol=native#text/pascal
+components/sqldb/sqldblaz.pas svneol=native#text/pascal
 components/sqlite/sqlitelaz.lpk svneol=native#text/pascal
 components/sqlite/sqlitelaz.pas svneol=native#text/pascal
 components/sqlite/sqliteresources.lrs svneol=native#text/pascal
