--- a/components/rtticontrols/examples/exampleprojectgrid1.lpi
+++ b/components/rtticontrols/examples/exampleprojectgrid1.lpi
@@ -1,6 +1,7 @@
 <?xml version="1.0"?>
 <CONFIG>
   <ProjectOptions>
+    <PathDelim Value="/"/>
     <Version Value="5"/>
     <General>
       <Flags>
@@ -8,7 +9,7 @@
         <SaveOnlyProjectUnits Value="True"/>
       </Flags>
       <MainUnit Value="0"/>
-      <ActiveEditorIndexAtStart Value="0"/>
+      <ActiveEditorIndexAtStart Value="1"/>
       <IconPath Value="./"/>
       <TargetFileExt Value=""/>
       <Title Value="exampleprojectgrid1"/>
@@ -18,19 +19,19 @@
         <Filename Value="exampleprojectgrid1.lpr"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="ExampleProjectGrid1"/>
-        <UsageCount Value="20"/>
+        <UsageCount Value="22"/>
       </Unit0>
       <Unit1>
-        <CursorPos X="15" Y="48"/>
+        <CursorPos X="18" Y="59"/>
         <EditorIndex Value="0"/>
         <Filename Value="examplegrid1.pas"/>
         <ComponentName Value="Form1"/>
         <IsPartOfProject Value="True"/>
         <Loaded Value="True"/>
         <ResourceFilename Value="examplegrid1.lrs"/>
-        <TopLine Value="29"/>
+        <TopLine Value="39"/>
         <UnitName Value="ExampleGrid1"/>
-        <UsageCount Value="20"/>
+        <UsageCount Value="22"/>
       </Unit1>
     </Units>
     <PublishOptions>
@@ -56,7 +57,7 @@
     </RequiredPackages>
   </ProjectOptions>
   <CompilerOptions>
-    <Version Value="3"/>
+    <Version Value="4"/>
     <SearchPaths>
       <SrcPath Value="$(LazarusDir)/lcl/;$(LazarusDir)/lcl/interfaces/$(LCLWidgetType)/"/>
     </SearchPaths>
