renamed invert attribution to invert assignment tool  from Sergio
 SVN 6585@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -740,7 +740,7 @@ ide/include/win32/lazconf.inc svneol=native#text/pascal
 ide/initialsetupdlgs.pas svneol=native#text/pascal
 ide/inputfiledialog.pas svneol=native#text/pascal
 ide/inputhistory.pas svneol=native#text/pascal
-ide/invertattribtool.pas svneol=native#text/pascal
+ide/invertassigntool.pas svneol=native#text/pascal
 ide/keymapping.pp svneol=native#text/pascal
 ide/keymapschemedlg.lfm svneol=native#text/plain
 ide/keymapschemedlg.lrs svneol=native#text/pascal
