added forgotten example files
 SVN 6609@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -561,10 +561,15 @@ examples/easter/main.lfm svneol=native#text/plain
 examples/easter/main.lrs svneol=native#text/pascal
 examples/easter/main.pas svneol=native#text/pascal
 examples/edittest.pp svneol=native#text/pascal
+examples/grid_semaphor/example/project1.lpi svneol=native#text/plain
+examples/grid_semaphor/example/project1.lpr svneol=native#text/pascal
 examples/grid_semaphor/example/table01.stb -text svneol=unset#application/octet-stream
 examples/grid_semaphor/example/table02.stb -text svneol=unset#application/octet-stream
 examples/grid_semaphor/example/table03hidden.stb -text svneol=unset#application/octet-stream
 examples/grid_semaphor/example/table04hidden.stb -text svneol=unset#application/octet-stream
+examples/grid_semaphor/example/unit1.lfm svneol=native#text/plain
+examples/grid_semaphor/example/unit1.lrs svneol=native#text/pascal
+examples/grid_semaphor/example/unit1.pas svneol=native#text/pascal
 examples/grid_semaphor/readme.txt svneol=native#text/plain
 examples/grid_semaphor/semaphorgridlpk.lpk svneol=native#text/pascal
 examples/grid_semaphor/semaphorgridlpk.pas svneol=native#text/pascal
