--- a/.gitattributes
+++ b/.gitattributes
@@ -1044,6 +1044,14 @@ images/components/tupdown.xpm -text svneol=native#image/x-xpixmap
 images/components/txmlpropstorage.xpm -text svneol=native#image/x-xpixmap
 images/components/unregisteredcomponent.xpm -text svneol=native#image/x-xpixmap
 images/components_images.lrs svneol=native#text/pascal
+images/designer/anchorbottombottom.xpm -text svneol=native#image/x-xpixmap
+images/designer/anchorcenterhorizontal.xpm -text svneol=native#image/x-xpixmap
+images/designer/anchorcentervertical.xpm -text svneol=native#image/x-xpixmap
+images/designer/anchorleftleft.xpm -text svneol=native#image/x-xpixmap
+images/designer/anchorleftright.xpm -text svneol=native#image/x-xpixmap
+images/designer/anchorrightright.xpm -text svneol=native#image/x-xpixmap
+images/designer/anchortopbottom.xpm -text svneol=native#image/x-xpixmap
+images/designer/anchortoptop.xpm -text svneol=native#image/x-xpixmap
 images/downarrow.ico -text svneol=unset#image/x-icon
 images/downarrow.xpm -text svneol=native#image/x-xpixmap
 images/fonts.ico -text svneol=unset#image/x-icon
