added taborder example
 SVN 6664@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -631,6 +631,7 @@ examples/selectionform.pp svneol=native#text/pascal
 examples/speedtest.pp svneol=native#text/pascal
 examples/synchronize.pp svneol=native#text/pascal
 examples/synedit1.pas svneol=native#text/pascal
+examples/taborder.pas svneol=native#text/pascal
 examples/testall.pp svneol=native#text/pascal
 examples/testallform.pp svneol=native#text/pascal
 examples/testtools.inc svneol=native#text/pascal
