added sprite example
 SVN 6666@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -629,6 +629,11 @@ examples/scrollbar.pp svneol=native#text/pascal
 examples/selection.pp svneol=native#text/pascal
 examples/selectionform.pp svneol=native#text/pascal
 examples/speedtest.pp svneol=native#text/pascal
+examples/sprites/playground.lfm svneol=native#text/plain
+examples/sprites/playground.lrs svneol=native#text/pascal
+examples/sprites/playground.pas svneol=native#text/pascal
+examples/sprites/spriteexample.lpi svneol=native#text/plain
+examples/sprites/spriteexample.lpr svneol=native#text/pascal
 examples/synchronize.pp svneol=native#text/pascal
 examples/synedit1.pas svneol=native#text/pascal
 examples/taborder.pas svneol=native#text/pascal
