added MySQL connection-component  from Joost
 SVN 6692@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -214,13 +214,25 @@ components/sdf/tfixedformatdataset.xpm -text svneol=native#image/x-xpixmap
 components/sdf/tsdfdataset.xpm -text svneol=native#image/x-xpixmap
 components/sqldb/interbase/ibconnectionlaz.lpk svneol=native#text/pascal
 components/sqldb/interbase/ibconnectionlaz.pas svneol=native#text/pascal
+components/sqldb/interbase/registeribconnection.lrs svneol=native#text/pascal
 components/sqldb/interbase/registeribconnection.pas svneol=native#text/pascal
+components/sqldb/interbase/tibconnection.xpm -text svneol=native#image/x-xpixmap
+components/sqldb/mysql/mysql4connlaz.lpk svneol=native#text/pascal
+components/sqldb/mysql/mysql4connlaz.pas svneol=native#text/pascal
+components/sqldb/mysql/registermysql4conn.lrs svneol=native#text/pascal
+components/sqldb/mysql/registermysql4conn.pas svneol=native#text/pascal
+components/sqldb/mysql/tmysqlconnection.xpm -text svneol=native#image/x-xpixmap
 components/sqldb/postgres/pqconnectionlaz.lpk svneol=native#text/pascal
 components/sqldb/postgres/pqconnectionlaz.pas svneol=native#text/pascal
+components/sqldb/postgres/registerpqconnection.lrs svneol=native#text/pascal
 components/sqldb/postgres/registerpqconnection.pas svneol=native#text/pascal
+components/sqldb/postgres/tpqconnection.xpm -text svneol=native#image/x-xpixmap
+components/sqldb/registersqldb.lrs svneol=native#text/pascal
 components/sqldb/registersqldb.pas svneol=native#text/pascal
 components/sqldb/sqldblaz.lpk svneol=native#text/pascal
 components/sqldb/sqldblaz.pas svneol=native#text/pascal
+components/sqldb/tsqlquery.xpm -text svneol=native#image/x-xpixmap
+components/sqldb/tsqltransaction.xpm -text svneol=native#image/x-xpixmap
 components/sqlite/sqlitelaz.lpk svneol=native#text/pascal
 components/sqlite/sqlitelaz.pas svneol=native#text/pascal
 components/sqlite/sqliteresources.lrs svneol=native#text/pascal
