added first lcl intf test
 SVN 6796@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1673,6 +1673,8 @@ lcl/stdctrls.pp svneol=native#text/pascal
 lcl/stringhashlist.pas svneol=native#text/pascal
 lcl/templates/template.inc svneol=native#text/pascal
 lcl/templates/template.pp svneol=native#text/pascal
+lcl/tests/test1_1simpleform1.lpi svneol=native#text/plain
+lcl/tests/test1_1simpleform1.lpr svneol=native#text/pascal
 lcl/textstrings.pas svneol=native#text/pascal
 lcl/toolwin.pp svneol=native#text/pascal
 lcl/utrace.pp svneol=native#text/pascal
