published TButton.OnMouseEnter/Leave, added lcl test for single button
 SVN 6810@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1675,6 +1675,8 @@ lcl/templates/template.inc svneol=native#text/pascal
 lcl/templates/template.pp svneol=native#text/pascal
 lcl/tests/test1_1simpleform1.lpi svneol=native#text/plain
 lcl/tests/test1_1simpleform1.lpr svneol=native#text/pascal
+lcl/tests/test1_2button.lpi svneol=native#text/plain
+lcl/tests/test1_2button.lpr svneol=native#text/pascal
 lcl/textstrings.pas svneol=native#text/pascal
 lcl/toolwin.pp svneol=native#text/pascal
 lcl/utrace.pp svneol=native#text/pascal
