--- a/.gitattributes
+++ b/.gitattributes
@@ -1677,6 +1677,8 @@ lcl/tests/test1_1simpleform1.lpi svneol=native#text/plain
 lcl/tests/test1_1simpleform1.lpr svneol=native#text/pascal
 lcl/tests/test1_2button.lpi svneol=native#text/plain
 lcl/tests/test1_2button.lpr svneol=native#text/pascal
+lcl/tests/test1_3label.lpi svneol=native#text/plain
+lcl/tests/test1_3label.lpr svneol=native#text/pascal
 lcl/textstrings.pas svneol=native#text/pascal
 lcl/toolwin.pp svneol=native#text/pascal
 lcl/utrace.pp svneol=native#text/pascal
