--- a/.gitattributes
+++ b/.gitattributes
@@ -1679,6 +1679,8 @@ lcl/tests/test1_2button.lpi svneol=native#text/plain
 lcl/tests/test1_2button.lpr svneol=native#text/pascal
 lcl/tests/test1_3label.lpi svneol=native#text/plain
 lcl/tests/test1_3label.lpr svneol=native#text/pascal
+lcl/tests/test1_4edit.lpi svneol=native#text/plain
+lcl/tests/test1_4edit.lpr svneol=native#text/pascal
 lcl/textstrings.pas svneol=native#text/pascal
 lcl/toolwin.pp svneol=native#text/pascal
 lcl/utrace.pp svneol=native#text/pascal
