fixed navigation key handling for TButton
 SVN 6816@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1681,6 +1681,8 @@ lcl/tests/test1_3label.lpi svneol=native#text/plain
 lcl/tests/test1_3label.lpr svneol=native#text/pascal
 lcl/tests/test1_4edit.lpi svneol=native#text/plain
 lcl/tests/test1_4edit.lpr svneol=native#text/pascal
+lcl/tests/test2_1buttonnavigation.lpi svneol=native#text/plain
+lcl/tests/test2_1buttonnavigation.lpr svneol=native#text/pascal
 lcl/textstrings.pas svneol=native#text/pascal
 lcl/toolwin.pp svneol=native#text/pascal
 lcl/utrace.pp svneol=native#text/pascal
