--- a/.gitattributes
+++ b/.gitattributes
@@ -262,6 +262,7 @@ components/synedit/design/tsynxmlsyn.xpm -text svneol=native#image/x-xpixmap
 components/synedit/languages/synedit.ca.po svneol=native#text/plain
 components/synedit/languages/synedit.de.po svneol=native#text/plain
 components/synedit/languages/synedit.fi.po svneol=native#text/plain
+components/synedit/languages/synedit.fiwin.po svneol=native#text/plain
 components/synedit/languages/synedit.fr.po svneol=native#text/plain
 components/synedit/languages/synedit.it.po svneol=native#text/plain
 components/synedit/languages/synedit.itiso.po svneol=native#text/plain
@@ -1201,6 +1202,7 @@ languages/lazaruside.de.po svneol=native#text/plain
 languages/lazaruside.es.po svneol=native#text/plain
 languages/lazaruside.esutf.po svneol=native#text/plain
 languages/lazaruside.fi.po svneol=native#text/plain
+languages/lazaruside.fiwin.po svneol=native#text/plain
 languages/lazaruside.fr.po svneol=native#text/plain
 languages/lazaruside.he.po svneol=native#text/plain
 languages/lazaruside.it.po svneol=native#text/plain
@@ -1217,6 +1219,7 @@ languages/objinspstrconsts.de.po svneol=native#text/plain
 languages/objinspstrconsts.es.po svneol=native#text/plain
 languages/objinspstrconsts.esutf.po svneol=native#text/plain
 languages/objinspstrconsts.fi.po svneol=native#text/plain
+languages/objinspstrconsts.fiwin.po svneol=native#text/plain
 languages/objinspstrconsts.fr.po svneol=native#text/plain
 languages/objinspstrconsts.it.po svneol=native#text/plain
 languages/objinspstrconsts.itiso.po svneol=native#text/plain
@@ -1638,6 +1641,7 @@ lcl/languages/lcl.de.po svneol=native#text/plain
 lcl/languages/lcl.es.po svneol=native#text/plain
 lcl/languages/lcl.esutf.po svneol=native#text/plain
 lcl/languages/lcl.fi.po svneol=native#text/plain
+lcl/languages/lcl.fiwin.po svneol=native#text/plain
 lcl/languages/lcl.fr.po svneol=native#text/plain
 lcl/languages/lcl.it.po svneol=native#text/plain
 lcl/languages/lcl.itiso.po svneol=native#text/plain
