--- a/.gitattributes
+++ b/.gitattributes
@@ -1527,6 +1527,7 @@ lcl/interfaces/gtk2/gtk2lclintf.inc svneol=native#text/pascal
 lcl/interfaces/gtk2/gtk2lclintfh.inc svneol=native#text/pascal
 lcl/interfaces/gtk2/gtk2object.inc svneol=native#text/pascal
 lcl/interfaces/gtk2/gtk2winapi.inc svneol=native#text/pascal
+lcl/interfaces/gtk2/gtk2winapih.inc svneol=native#text/pascal
 lcl/interfaces/gtk2/gtk2wsactnlist.pp svneol=native#text/pascal
 lcl/interfaces/gtk2/gtk2wsarrow.pp svneol=native#text/pascal
 lcl/interfaces/gtk2/gtk2wsbuttons.pp svneol=native#text/pascal
@@ -1566,6 +1567,8 @@ lcl/interfaces/qt/qtint.pp svneol=native#text/pascal
 lcl/interfaces/qt/qtlclintf.inc svneol=native#text/pascal
 lcl/interfaces/qt/qtlclintfh.inc svneol=native#text/pascal
 lcl/interfaces/qt/qtobject.inc svneol=native#text/pascal
+lcl/interfaces/qt/qtwinapi.inc svneol=native#text/pascal
+lcl/interfaces/qt/qtwinapih.inc svneol=native#text/pascal
 lcl/interfaces/qt/qtwsactnlist.pp svneol=native#text/pascal
 lcl/interfaces/qt/qtwsarrow.pp svneol=native#text/pascal
 lcl/interfaces/qt/qtwsbuttons.pp svneol=native#text/pascal
