--- a/.gitattributes
+++ b/.gitattributes
@@ -1501,6 +1501,7 @@ lcl/interfaces/gtk/gtkwschecklst.pp svneol=native#text/pascal
 lcl/interfaces/gtk/gtkwsclistbox.pp svneol=native#text/pascal
 lcl/interfaces/gtk/gtkwscomctrls.pp svneol=native#text/pascal
 lcl/interfaces/gtk/gtkwscontrols.pp svneol=native#text/pascal
+lcl/interfaces/gtk/gtkwscustomlistview.inc svneol=native#text/pascal
 lcl/interfaces/gtk/gtkwsdbctrls.pp svneol=native#text/pascal
 lcl/interfaces/gtk/gtkwsdbgrids.pp svneol=native#text/pascal
 lcl/interfaces/gtk/gtkwsdialogs.pp svneol=native#text/pascal
@@ -1620,6 +1621,7 @@ lcl/interfaces/win32/win32wschecklst.pp svneol=native#text/pascal
 lcl/interfaces/win32/win32wsclistbox.pp svneol=native#text/pascal
 lcl/interfaces/win32/win32wscomctrls.pp svneol=native#text/pascal
 lcl/interfaces/win32/win32wscontrols.pp svneol=native#text/pascal
+lcl/interfaces/win32/win32wscustomlistview.inc svneol=native#text/pascal
 lcl/interfaces/win32/win32wsdbctrls.pp svneol=native#text/pascal
 lcl/interfaces/win32/win32wsdbgrids.pp svneol=native#text/pascal
 lcl/interfaces/win32/win32wsdialogs.pp svneol=native#text/pascal
