added printer4lazarus package  from Olivier
 SVN 6926@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -149,6 +149,21 @@ components/mysql/registermysql.lrs svneol=native#text/pascal
 components/mysql/registermysql.pas svneol=native#text/pascal
 components/mysql/tmysqldatabase.xpm -text svneol=native#image/x-xpixmap
 components/mysql/tmysqldataset.xpm -text svneol=native#image/x-xpixmap
+components/printers/cupsprintersdlgs.pp svneol=native#text/pascal
+components/printers/lazprinter.pp svneol=native#text/pascal
+components/printers/printer4lazarus.lpk svneol=native#text/pascal
+components/printers/printer4lazarus.pas svneol=native#text/pascal
+components/printers/printersdlgs.lrs svneol=native#text/pascal
+components/printers/printersdlgs.pp svneol=native#text/pascal
+components/printers/readme.txt svneol=native#text/plain
+components/printers/sample/frmselprinter.lfm svneol=native#text/plain
+components/printers/sample/frmselprinter.lrs svneol=native#text/pascal
+components/printers/sample/frmselprinter.pas svneol=native#text/pascal
+components/printers/sample/selectprinter.lpi svneol=native#text/plain
+components/printers/sample/selectprinter.lpr svneol=native#text/pascal
+components/printers/winprinters.pas svneol=native#text/pascal
+components/printers/winutilprn.pas svneol=native#text/pascal
+components/printers/winutilprnconst.inc svneol=native#text/pascal
 components/rtticontrols/baseicon.png -text svneol=unset#image/png
 components/rtticontrols/examples/example1.lfm svneol=native#text/plain
 components/rtticontrols/examples/example1.lrs svneol=native#text/pascal
