--- a/.gitattributes
+++ b/.gitattributes
@@ -865,7 +865,12 @@ ide/viewunit_dlg.lfm svneol=native#text/plain
 ide/viewunit_dlg.pp svneol=native#text/pascal
 ide/viewunits1.lrs svneol=native#text/pascal
 ide/wordcompletion.pp svneol=native#text/pascal
+ideintf/actionseditor.lfm svneol=native#text/plain
+ideintf/actionseditor.lrs svneol=native#text/pascal
 ideintf/actionseditor.pas svneol=native#text/pascal
+ideintf/actionseditorstd.lfm svneol=native#text/plain
+ideintf/actionseditorstd.lrs svneol=native#text/pascal
+ideintf/actionseditorstd.pas svneol=native#text/pascal
 ideintf/allideintf.pas svneol=native#text/pascal
 ideintf/columndlg.pp svneol=native#text/pascal
 ideintf/componenteditors.pas svneol=native#text/pascal
