--- a/.gitattributes
+++ b/.gitattributes
@@ -875,6 +875,7 @@ ideintf/allideintf.pas svneol=native#text/pascal
 ideintf/columndlg.pp svneol=native#text/pascal
 ideintf/componenteditors.pas svneol=native#text/pascal
 ideintf/componentreg.pas svneol=native#text/pascal
+ideintf/componenttreeview.lrs svneol=native#text/pascal
 ideintf/componenttreeview.pas svneol=native#text/pascal
 ideintf/configstorage.pas svneol=native#text/pascal
 ideintf/dbpropedits.pas svneol=native#text/pascal
@@ -891,6 +892,10 @@ ideintf/macrointf.pas svneol=native#text/pascal
 ideintf/newitemintf.pas svneol=native#text/pascal
 ideintf/objectinspector.pp svneol=native#text/pascal
 ideintf/objinspstrconsts.pas svneol=native#text/pascal
+ideintf/oi_box.bmp -text svneol=unset#image/bmp
+ideintf/oi_comp.bmp -text svneol=unset#image/bmp
+ideintf/oi_control.bmp -text svneol=unset#image/bmp
+ideintf/oi_form.bmp -text svneol=unset#image/bmp
 ideintf/packageintf.pas svneol=native#text/pascal
 ideintf/projectintf.pas svneol=native#text/pascal
 ideintf/propedits.pp svneol=native#text/pascal
